styles.css
*{
    margin: 0;
    padding: 0;
    font-family: "Arial";
}

:root{
    /* --bg-color: #2c6e49;
    --timer-color: #fdc228;
    --header-color: #eed28a;
    --input-bg-color: #4c956c;
    --input-text-color: #eed28a;
    --button-color: #f99d21; */

    --bg-color: #0f2730;
    --timer-color: #37ebbe;
    --header-color: #ffffff;
    
    --input-bg-color: #384652;
    --input-placeholder-color: #ffffff;
    --input-text-color: #37ebbe;

    --add-button-bg-color: #165268;
    --start-button-bg-color: #37ebbe;
    --reset-button-bg-color: rgba(150, 16, 16, 0.904);

    --button-text-color: #ffffff;
    --start-button-text-color: #165268;

    --popup-bg-color: #007a72f1;
    --popup-text-color: #ffffff;
    --popup-close-bg-color: #023436;
}

body{
    background-color: var(--bg-color);
}


.header{
    color: var(--header-color);
    font-size: 24px;
    padding: 10px;
    display: flex;
    justify-content: center;
}

.timer-controls{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.input-timer{
    padding: 8px;
    border-radius: 8px;
    border: none;
    width: 12vw;
    background-color: var(--input-bg-color);
    color: var(--input-text-color);
}

.input-timer::placeholder, .input-label::placeholder{
    color: var(--input-placeholder-color);
}

.input-label{
    padding: 8px;
    border-radius: 8px;
    border: none;
    background-color: var(--input-bg-color);
    color: var(--input-text-color);
}

.add-button{
    padding: 8px;
    border-radius: 8px;
    border: none;
    cursor: pointer;
    border: 1px solid black;
    background-color: var(--add-button-bg-color);
    color: var(--button-text-color);
}

.start-button{
    padding: 8px;
    border-radius: 8px;
    border: none;
    cursor: pointer;
    border: 1px solid black;
    background-color: var(--start-button-bg-color);
    color: var(--start-button-text-color);
}

.reset-button{
    padding: 8px;
    border-radius: 8px;
    border: none;
    cursor: pointer;
    border: 1px solid black;
    background-color: var(--reset-button-bg-color);
    color: var(--button-text-color);
}

.timer-display{
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--timer-color);
    margin-bottom: 8px;
}

.start-container{
    display: flex;
    justify-content: center;
    margin-top: 8px;
    gap: 8px;
}

.timer-label{
    font-size: 24px;
    padding: 8px;
    color: rgb(212, 235, 202);
}

.timer{
    font-size: 64px;
}

.ul-list{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
    margin-top: 8px;
}

.li-wrapper{
    display: flex;
    align-items: center;
    width: 76vw;
    justify-content: space-between;
    background-color:var(--input-bg-color);
    border-radius: 8px;
    padding: 8px;
}

.li-label{
    list-style: none;
    color: rgb(225, 250, 213);
    font-size: 16px;
}

.li-time{
    list-style: none;
    color: rgb(255, 250, 213);
    background-color: var(--bg-color);
    border-radius: 8px;
    padding: 10px;
}

.active-timer{
    list-style: none;
    border: 2px solid var(--timer-color);
}

.close{
    background: none;
    border: none;
    color: rgb(49, 49, 49);
}

.popup{
    background-color: var(--popup-bg-color);
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    width: 70vw;
    margin: 0 auto;
    border-radius: 18px;
    height: 35vh;
    color: var(--popup-text-color);
    gap: 8px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    /* display: none; */
}

.popupPrimaryText{
    margin-top: 1vh;
    font-size: 1.5em;
}

.popupSecondaryText{
    margin-top: 8px;
}

.popup img{
    margin-top: 16px;
}

.popup span{
    align-self: flex-end;
    margin: 8px 8px 0 0;
    width: 20px;
    height: 20px;
    background-color: var(--popup-close-bg-color);
    text-align: center;
    color: var(--popup-text-color);
    border-radius: 3px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    cursor: pointer;
}

